@@ -1,8 +1,10 @@
 requires "Catalyst::Runtime" => "0";
 requires "Moose::Role" => "0";
 requires "Plack::Middleware::Statsd" => "0";
+requires "Ref::Util" => "0";
 requires "namespace::autoclean" => "0";
 requires "perl" => "v5.8.0";
+recommends "Ref::Util::XS" => "0";
 
 on 'test' => sub {
   requires "Catalyst" => "0";
